@@ -88,7 +88,7 @@
         <unit>in</unit>
         <relation>4</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -98,7 +98,7 @@
         <unit>hand</unit>
         <relation>3</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -108,7 +108,7 @@
         <unit>US_in</unit>
         <relation>12</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -118,7 +118,7 @@
         <unit>in</unit>
         <relation>7.92</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>3</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -128,7 +128,7 @@
         <unit>ft</unit>
         <relation>3</relation>
         <exponent>1</exponent>
-        <combine>2</combine>
+        <mix min="12">1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -138,7 +138,7 @@
         <unit>US_ft</unit>
         <relation>16.5</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -148,7 +148,7 @@
         <unit>yd</unit>
         <relation>2</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -158,7 +158,7 @@
         <unit>li</unit>
         <relation>100</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -168,7 +168,7 @@
         <unit>ch</unit>
         <relation>10</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -178,7 +178,7 @@
         <unit>yd</unit>
         <relation>1760</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -188,7 +188,7 @@
         <unit>US_ft</unit>
         <relation>5280</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -198,7 +198,7 @@
         <unit>in</unit>
         <relation>0.001</relation>
         <exponent>1</exponent>
-        <combine>-3</combine>
+        <mix>-3</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -459,7 +459,7 @@
         <unit>gr</unit>
         <relation>24</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -469,7 +469,7 @@
         <unit>pwt</unit>
         <relation>20</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -479,7 +479,7 @@
         <unit>oz_t</unit>
         <relation>12</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -507,7 +507,7 @@
         <unit>oz</unit>
         <relation>16</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -553,7 +553,7 @@
         <unit>lb</unit>
         <relation>14</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -716,7 +716,7 @@
         <unit>s</unit>
         <relation>60</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -726,7 +726,7 @@
         <unit>min</unit>
         <relation>60</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -736,7 +736,7 @@
         <unit>h</unit>
         <relation>24</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -746,7 +746,7 @@
         <unit>day</unit>
         <relation>7</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <unit type="alias">
@@ -765,7 +765,7 @@
         <unit>d</unit>
         <relation>365.25</relation>
         <exponent>1</exponent>
-        <combine>3</combine>
+        <mix>2</mix>
       </base>
     </unit>
     <category>
@@ -1542,7 +1542,7 @@
         <unit>section</unit>
         <relation>36</relation>
         <exponent>1</exponent>
-        <combine>1</combine>
+        <mix>1</mix>
       </base>
     </unit>
     <unit type="composite">
@@ -1694,7 +1694,7 @@
           <unit>L</unit>
           <relation>0.005</relation>
           <exponent>1</exponent>
-          <combine>1</combine>
+          <mix>1</mix>
         </base>
       </unit>
       <unit type="alias">
@@ -1704,7 +1704,7 @@
           <unit>teaspoon</unit>
           <relation>2</relation>
           <exponent>1</exponent>
-          <combine>3</combine>
+          <mix>2</mix>
         </base>
       </unit>
       <unit type="alias">
@@ -1714,7 +1714,7 @@
           <unit>teaspoon</unit>
           <relation>3</relation>
           <exponent>1</exponent>
-          <combine>1</combine>
+          <mix>1</mix>
         </base>
       </unit>
       <unit type="alias">
@@ -1745,7 +1745,7 @@
           <unit>UK_fl_oz</unit>
           <relation>5</relation>
           <exponent>1</exponent>
-          <combine>2</combine>
+          <mix>-1</mix>
         </base>
       </unit>
       <unit type="alias">
@@ -1755,7 +1755,7 @@
           <unit>UK_gi</unit>
           <relation>4</relation>
           <exponent>1</exponent>
-          <combine>1</combine>
+          <mix>1</mix>
         </base>
       </unit>
       <unit type="alias">
@@ -1765,7 +1765,7 @@
           <unit>UK_pt</unit>
           <relation>2</relation>
           <exponent>1</exponent>
-          <combine>2</combine>
+          <mix>-1</mix>
         </base>
       </unit>
       <unit type="alias">
@@ -1775,7 +1775,7 @@
           <unit>UK_qt</unit>
           <relation>4</relation>
           <exponent>1</exponent>
-          <combine>1</combine>
+          <mix>1</mix>
         </base>
       </unit>
       <unit type="alias">
@@ -1812,7 +1812,7 @@
           <unit>UK_gal</unit>
           <relation>8</relation>
           <exponent>1</exponent>
-          <combine>1</combine>
+          <mix>1</mix>
         </base>
       </unit>
     </category>
